# LocalAIServer

./: .gitignore  M1_MAX_COMPATIBILITY_NOTES.md  MANIFEST.in  QLORA_IMPLEMENTATION_ROADMAP.md  README.md  pyproject.toml  requirements.txt  test_api_endpoints.py  test_training_pipeline.py
config/: README.md  v1_surgical_lora_config.json  v2_override_lora_config.json
data/: README.md
docs/: 42-comprehensive-analysis-report.md  M1_MAX_COMPATIBILITY_NOTES.md
docs/analysis/: FUTURE_FEATURES_ROADMAP.md  MULTI_CONCEPT_TRAINING_STRATEGY.md  TRAINING_DATA_EXTRACTION_ANALYSIS.md
docs/archive/: QLORA_IMPLEMENTATION_ROADMAP.md
docs/current/: ADAPTER_LOADING_DEFINITIVE_FIX.md  HYBRID_SURGICAL_LORA_IMPLEMENTATION_PLAN.md  SURGICAL_LORA_BREAKTHROUGH_STATUS.md
docs/guides/: STEP_7.6_INTENSIVE_TRAINING_GUIDE.md  TRAINING_API.md  TRAINING_CONFIGURATIONS_REFERENCE.md
docs/progress/: PHASE_2_COMPLETION_REPORT.md  PHASE_3_CONFIGURATION_OPTIMIZATION.md  PHASE_4_TRAINING_EXECUTION.md  SURGICAL_LORA_30_PERCENT_UPDATE.md  SURGICAL_LORA_ACTIVE_PROGRESS.md  SURGICAL_LORA_LIVE_MONITOR.md  SURGICAL_LORA_RESTART_SUCCESS.md
local_ai_server/: __init__.py  __main__.py  chroma_store.py  cli.py  config.py  endpoints.py  history_manager.py  model_manager.py  models_config.py  rag.py  server.py  vector_store.py
local_ai_server/static/: index.html  swagger.json
local_ai_server/storage/chroma/: chroma.sqlite3
local_ai_server/storage/chroma/history/: chroma.sqlite3  meta.json
local_ai_server/storage/chroma/history/collection/response_history/: storage.sqlite
local_ai_server/storage/vectors/: meta.json
local_ai_server/storage/vectors/collection/documents/: storage.sqlite
local_ai_server/storage/vectors/collection/response_history/: storage.sqlite
local_ai_server/training/: __init__.py  adapter_manager.py  chroma_adapter.py  data_manager.py  document_analyzer.py  formats.py  job_manager.py  preprocessing.py  validation.py
local_ai_server/training/qlora/: __init__.py  checkpoint.py  config.py  monitor.py  trainer.py
scripts/: README.md  download_utility.py  fix_adapter_structure.py  monitor_surgical_training.sh
tests/: test_adapter_inference.py  test_api.py  test_conversation_persistence.py  test_download.py  test_history_manager.py  test_qlora_training.py  test_rag.py  test_training_api.py  test_training_pipeline.py
