[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local_ai_server"
version = "0.1.0"
description = "Local AI server with OpenAI-compatible endpoints"
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "transformers>=4.0.0",
    "torch>=2.0.0",
    "pydantic>=1.8.0",
    "llama-cpp-python[server]==0.2.27",
    "pyOpenSSL>=23.0.0",
    "cryptography>=41.0.0"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.scripts]
local-ai-server = "local_ai_server.__main__:main"
