[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local_ai_server"
version = "0.1.0"
description = "A local server that provides OpenAI-compatible endpoints for language models"
authors = [
    {name = "Local AI Server Contributors"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "transformers>=4.0.0",
    "torch>=2.0.0",
    "llama-cpp-python[server]==0.2.27",
    "pyOpenSSL>=23.0.0",
    "cryptography>=41.0.0",
    "flask>=2.0.0",
    "werkzeug>=2.0.0",
    "flask-swagger-ui>=3.36.0",
    "requests>=2.25.0",
    "waitress>=2.1.0"
]

[project.scripts]
local-ai-server = "local_ai_server.__main__:main"
