[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local_ai_server"
version = "0.1.0"
description = "A local server that provides OpenAI-compatible endpoints for language models"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Local AI Server Contributors"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    # Core ML Libraries for QLoRA Training (M1 Max Optimized)
    "transformers>=4.35.0",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    
    # QLoRA Training Dependencies
    "peft>=0.6.0",
    "bitsandbytes>=0.41.0",
    "accelerate>=0.24.0",
    "datasets>=2.14.0",
    "trl>=0.7.0",
    
    # Training Monitoring & Evaluation
    "wandb>=0.15.0",
    "evaluate>=0.4.0",
    "scikit-learn>=1.3.0",
    
    # HuggingFace Hub Integration
    "huggingface-hub>=0.17.0",
    
    # Server Dependencies
    "pyOpenSSL>=23.0.0",
    "cryptography>=41.0.0",
    "flask>=2.0.0",
    "werkzeug>=2.0.0",
    "flask-swagger-ui>=3.36.0",
    "requests>=2.25.0",
    "waitress>=2.1.0",
    "click>=8.0.0",
    
    # Vector Store and RAG
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.2.2",
    "chromadb>=0.4.22",
    
    # Utilities
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "flask-session>=0.5.0",
    
    # Web Scraping (Optional)
    "selenium>=4.9.0",
    "webdriver-manager>=3.8.6",
    
    # Keep for backward compatibility (will be removed in later steps)
    "llama-cpp-python[server]>=0.2.27"
]

[project.scripts]
local-ai-server = "local_ai_server.cli:cli"

[tool.setuptools]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.package-data]
local_ai_server = [
    "static/*",
    "models/.gitkeep",
    "ssl/.gitkeep",
    "storage/vectors/.gitkeep"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["local_ai_server*"]
